--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -36,6 +36,10 @@
     padding-top: .2em
 p
     padding-bottom: 1em
+
+.landingText
+    font-size: 6em
+    text-shadow: 5px 5px 20px #000000
         
 @import "animations"
 @import "_footer"
